--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -226,6 +226,7 @@
         </defs>
       </svg>
       <h1>Hello, {{ title }}</h1>
+      <h2>ああああああああ</h2>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
@@ -245,6 +246,7 @@
             rel="noopener"
           >
             <span>{{ item.title }}</span>
+        
             <svg
               xmlns="http://www.w3.org/2000/svg"
               height="14"
