--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -227,6 +227,7 @@
       </svg>
       <h1>Hello, {{ title }}</h1>
       <h2>ああああああああ</h2>
+      <p>これはAngularnoテストです</p>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
